fix(autocomplete): Fix missing background color

--- a/src/autocomplete/style.scss
+++ b/src/autocomplete/style.scss
@@ -3,10 +3,12 @@
 .component-autocomplete {
     display: inline-block;
     position: relative;
+    color: $white;
+    background-color: $deep-purple;
     border-bottom: 1px solid $white;
     
 	input {
-        padding: 0.4em 0;
+        padding: 0.4em;
         background-color: transparent;
         border: none;
         outline: none;
@@ -19,7 +21,6 @@
         left: 0;
         right: 0;
         background: $deep-purple;
-        color: $white;
         z-index: 5;
         padding: 0.2em 0.3em;
         border: 1px solid $white;
